# Claude

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  Dockerfile  README.md  SESSION_HISTORY.md  aftersol-landing-page.html  index.html  paste_key.py  pyproject.toml  requirements.txt  run_demo.sh  stress_test.py
deploy/: docker-compose.yml  install.sh  kalshi-bot.service  kalshi-collector.service  polybot.service  setup.sh
donor_caller/: .env.example  README.md  businesses.csv  caller.py
kalshi_bot/: __init__.py  __main__.py  backtester.py  bot.py  client.py  config.py  data_collector.py  fill_model.py  historical_replay.py  market_selector.py  monitor.py  order_manager.py  paper_trade.py  position_sizer.py  quote_adjuster.py  rewards.py  state_store.py  stats.py  synthetic_data.py  vol_estimator.py  ws_client.py
marketing/: meta-ads-strategy.md
polymarket_bot/: README.md  __init__.py  __main__.py  backtest.py  bot.py  client.py  config.py  data_fetcher.py  market_selector.py  optimize.py  order_manager.py  position_sizer.py  requirements.txt  rewards.py  run_backtest.py
shopify-theme/: SETUP-GUIDE.md
shopify-theme-atelier/assets/: aftersol-atelier.css
shopify-theme-atelier/sections/: aftersol-faq.liquid  aftersol-final-cta.liquid  aftersol-hero.liquid  aftersol-how-it-works.liquid  aftersol-problem.liquid  aftersol-solution.liquid  aftersol-testimonials.liquid
shopify-theme/layout/: theme.liquid
tests/: __init__.py  test_art_powers.py  test_backtest.py  test_cli.py  test_code_powers.py  test_data_powers.py  test_polymarket_bot.py  test_text_powers.py
(+20 files in other folders)
